[package]
name = "audio-visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.3", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
cpal = "0.15.2"
bytemuck = { version = "1.14.0", features = [ "derive" ] }
hound = "3.5.1"
dasp = { version = "0.11.0", features = ["ring_buffer", "signal"] }
pollster = "0.3.0"
cgmath = "0.18.0"
rustfft = "6.1.0"
apodize = "1.0.0"
once_cell = "1.18.0"
